--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,10 @@ jobs:
           python-version: '3.11' 
 
       # ADJUST THIS: install all dependencies (including pdoc)
-      - run: pip install Jinja2 >= 2.11.0 pygments >= 2.12.0 MarkupSafe astunparse; python_version<'3.9'
+      - run: pip install Jinja2 >= 2.11.0 
+      - run: pip install pygments >= 2.12.0 
+      - run: pip install MarkupSafe 
+      - run: pip install astunparse; python_version<'3.9'
       # ADJUST THIS: build your documentation into docs/.
       # We use a custom build script for pdoc itself, ideally you just run `pdoc -o docs/ ...` here.
       - run: pdoc --math fsp -o docs
