--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
           python-version: '3.11' 
 
       # ADJUST THIS: install all dependencies (including pdoc)
-      - run: pip install Jinja2 >= 2.11.0 
+      - run: pip install Jinja2 
       - run: pip install pygments >= 2.12.0 
       - run: pip install MarkupSafe 
       - run: pip install astunparse; python_version<'3.9'
