--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
 
       # ADJUST THIS: install all dependencies (including pdoc)
       - run: pip install Jinja2 
-      - run: pip install pygments >= 2.12.0 
+      - run: pip install pygments 
       - run: pip install MarkupSafe 
       - run: pip install astunparse; python_version<'3.9'
       # ADJUST THIS: build your documentation into docs/.
