--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       - run: pip install Jinja2 
       - run: pip install pygments 
       - run: pip install MarkupSafe 
-      - run: pip install astunparse; python_version<'3.9'
+      - run: pip install astunparse; 3.11
       # ADJUST THIS: build your documentation into docs/.
       # We use a custom build script for pdoc itself, ideally you just run `pdoc -o docs/ ...` here.
       - run: pdoc --math fsp -o docs
