--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,8 @@ jobs:
           python-version: '3.11' 
 
       # ADJUST THIS: install all dependencies (including pdoc)
-      - run: pip install Jinja2 
-      - run: pip install pygments 
-      - run: pip install MarkupSafe 
+      - run: pip install pdoc 
+
       # ADJUST THIS: build your documentation into docs/.
       # We use a custom build script for pdoc itself, ideally you just run `pdoc -o docs/ ...` here.
       - run: pdoc --math fsp -o docs
