--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
 
       # ADJUST THIS: install all dependencies (including pdoc)
       - run: pip install pdoc
-      - run: pip install . 
+      - run: pip install -r requirements.txt 
 
 
       # ADJUST THIS: build your documentation into docs/.
