--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,8 @@ jobs:
 
       # ADJUST THIS: install all dependencies (including pdoc)
       - run: pip install pdoc
+      - run: pip uninstall certifi
+      - run: pip install certifi
       - run: pip install -r requirements.txt 
 
 
